[project]
name = "tf-leader"
version = "0.4.0"
description = "THE FINALS leaderboard collection, search, and history charts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "matplotlib>=3.10,<4",
    "uvicorn>=0.35,<1",
]

[project.scripts]
tf-leader = "tf_leader.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tf_leader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
